MH. Try to fix build.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: "Matthew Huebsch"
 description: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
 about: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
 location: "Matt H, Canada"
-email: 
+email: ""
 baseurl: "/material-theme"
 
 url: "https://github.com/matthewhuebsch/matthewhuebsch.github.io""
