--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title: "Matthew Huebsch"
+title: "Your Name"
 description: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
 about: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
-location: "Matt H, Canada"
-email: ""
+location: "Your Region, Country"
+email: your-email@example.com
 baseurl: "/material-theme"
 
-url: "https://github.com/matthewhuebsch/matthewhuebsch.github.io""
-twitter_username: matthuebsch
-github_username:  matthewhuebsch
-author: "Matthew Huebsch"
+url: ""
+twitter_username: ""
+github_username:  ""
+author: "Your Name"
 
 # google analytics tracking code, please change the value
 g_analytics: ""
