--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ location: "Your Region, Country"
 email: your-email@example.com
 baseurl: "/material-theme"
 
-url: ""
-twitter_username: ""
-github_username:  ""
+url: "http://himsel.me" # replace by your site's url
+twitter_username: your-name
+github_username:  lukas-h
 author: "Your Name"
 
 # google analytics tracking code, please change the value
