--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title: "Your Name"
+title: "Matt H"
 description: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
 about: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
 location: "Your Region, Country"
 email: your-email@example.com
-baseurl: "/material-theme"
+baseurl: ""
 
-url: "http://himsel.me" # replace by your site's url
-twitter_username: your-name
-github_username:  lukas-h
-author: "Your Name"
+url: "matthewhuebsch.github.io"
+twitter_username: matthuebsch
+github_username:  matthewhuebsch
+author: "Matthew Huebsch"
 
 # google analytics tracking code, please change the value
 g_analytics: ""
