--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ baseurl: ""
 url: "matthewhuebsch.github.io"
 twitter_username: matthuebsch
 github_username:  matthewhuebsch
+linkedin_username: matthewhuebsch
 author: "Matthew Huebsch"
 
 # google analytics tracking code, please change the value
