--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: "Matthew Huebsch"
-description: "Mass spectrometry. Proteomics. Algorithm evaluation. Data visualization. R."
-location: "Toronto, Canada"
+description: ""
+about: "Mass spectrometry. Bioinformatics. Algorithms. Data visualization. R."
+location: "Toronto, Ontario, Canada"
 email: mhuebsch+blog@gmail.com
 baseurl: ""
 
