--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ isolang: en
 close_btn: "Close"
 home_btn: "Home"
 projects_btn: "Projects"
-posts_btn: "Posts"
+posts_btn: "Blog"
 imprint_btn: "Imprint"
 name_badge: "an article by"
 rss_badge: "Subscribe feed!"
